Regression: Node Editor: Node links are sometimes created from the wrong socket #104219

Closed
opened 2023-01-29 15:51:04 +01:00 by Leon Schittek · 10 comments
Member

System Information
Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-29 00:10, hash: 042775ad48
Caused by: 87fd798ae3

Short description of error
When quickly dragging links out of sockets the link sometimes gets created from a different socket than the one that was dragged from. This seems more consistent the more nodes are on screen.

Exact steps for others to reproduce the error

  1. Have a lot of nodes on screen. (You can use the attached file.)
  2. Quickly drag a link from a socket. I think it needs to be done in a way that also selects the node.

#104219.blend

node-link-dragging-bug.mp4

**System Information** Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-29 00:10, hash: `042775ad48` Caused by: 87fd798ae3 **Short description of error** When quickly dragging links out of sockets the link sometimes gets created from a different socket than the one that was dragged from. This seems more consistent the more nodes are on screen. **Exact steps for others to reproduce the error** 1. Have a lot of nodes on screen. (You can use the attached file.) 2. Quickly drag a link from a socket. I think it needs to be done in a way that also selects the node. [#104219.blend](https://archive.blender.org/developer/F14209439/T104219.blend) [node-link-dragging-bug.mp4](https://archive.blender.org/developer/F14209349/node-link-dragging-bug.mp4)
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel

Added subscriber: @mod_moder

Added subscriber: @mod_moder

I no check this right now but it seem to be confirmed for my mind

I no check this right now but it seem to be confirmed for my mind

Hm, can you attach example file?

Hm, can you attach example file?
Author
Member

I attached the file from the video. :)

I attached the file from the video. :)

Okay, i really can reproduce this

Okay, i really can reproduce this
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

Bisecting points to 87fd798ae3.
CC @HooglyBoogly

Raising priority since it's a fairly recent regression.

Bisecting points to 87fd798ae3. CC @HooglyBoogly Raising priority since it's a fairly recent regression.
Philipp Oeser changed title from Node Editor: Node links are sometimes created from the wrong socket to Regression: Node Editor: Node links are sometimes created from the wrong socket 2023-01-31 09:04:20 +01:00

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Hans Goudey self-assigned this 2023-02-01 16:47:13 +01:00
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:43:10 +01:00
Brecht Van Lommel added this to the 3.5 milestone 2023-02-15 10:26:16 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-28 17:36:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104219
No description provided.